# metrologet

./: .env  README.md  alembic.ini  bd.sh  main.py  monitoring.backup  project_source_code.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 037f21b707b5_new_models.py  8ba69486bb06_add_order_field_to_groups.py  b0d08833131e_add_index_within_group_to_.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: groups.py  instruments.py  nodes.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.tsx  HomePage.css  HomePage.tsx  NodePage.css  NodePage.tsx  api.ts  code.txt  routes.js  types.ts
frontend/src/api/: apiClient.js
frontend/src/components/: AddGroupModal.jsx  AddInstrumentModal.js  AddInstrumentModal.jsx  AddNodeButton.js  DeleteInstrumentMenu.jsx  DeleteNodeMenu.js  DeleteNodeMenu.jsx  GroupCard.jsx  InstrumentCard.jsx  InstrumentTable.js  NodeCard.js  SearchBar.js  index.js
frontend/src/pages/: HomePage.js  HomePage.jsx  NodeDetails.js  NodeDetails.jsx  NotFound.js
frontend/src/styles/: App.scss  _base.scss  _components.scss  _instrumentcard.scss  _layout.scss  _mixins.scss  _nodedetail.scss  _search.scss  _variables.scss
frontend/src/styles/components/: Spinner.scss  _InstrumentCard.scss
frontend/src/styles/pages/: NodeDetails.scss  _HomePage.scss
protocol_generator/: main.py  pyproject.toml
